--- a/styles/styles.css
+++ b/styles/styles.css
@@ -53,9 +53,9 @@ footer {
   background-color: red;
 }
 
-ul > li {
-  position: relative;
-  display: inline-block;
+ul li {
+  margin-left: 50px;
+  padding-top: 10px;
 }
 
 ul > li > a {
@@ -140,6 +140,7 @@ footer li {
 .card-ubicacion {
   margin-left: 30px;
   margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .card-img-top {
@@ -150,8 +151,8 @@ footer li {
 }
 
 p {
-  margin: 50px;
-  padding: 10px;
+  margin: 30px;
+  padding: 5px;
 }
 
 .carousel img {
@@ -236,5 +237,16 @@ h2 {
   align-content: flex-start;
 }
 .tarjeta_btn .btn-primary {
+  margin-top: 50px;
+}
+
+.card-body {
+  height: 550px;
   margin-top: 10px;
+}
+
+.btn-primary {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=styles.css.map */
