--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -61,9 +61,11 @@ footer{
      }
 }   
 
-ul> li{
-	position: relative;
-	display: inline-block;
+ul{
+    li{
+        margin-left: 50px;
+        padding-top: 10px;
+    }
 }
 
 ul > li > a{
@@ -161,8 +163,10 @@ footer li{
 .card-ubicacion{
     margin-left:30px;
     margin-bottom: 50px;
+    margin-top: 50px;
     
 }
+
 
 .card-img-top{
     width: 150px;
@@ -172,8 +176,8 @@ footer li{
 }
 
 p{
-    margin: 50px;
-    padding: 10px;
+    margin: 30px;
+    padding: 5px;
 }
 
 .carousel img{
@@ -188,6 +192,7 @@ p{
         background-color: map-get($coloresbtn, btnVisited );
         color:white;
     }
+
 }
 
 @media (min-width: 768px) and (max-width: 1200px){
@@ -274,10 +279,18 @@ h2{
     height: 440px;
     align-content: flex-start;
     .btn-primary{
-        margin-top: 10px;
+        margin-top: 50px;
+
     }
 }
 
+.card-body{
+    height: 550px;
+    margin-top: 10px;
+}
 
-
-
+.btn-primary{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
