Entrega del proyecto final

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -202,6 +202,7 @@ p {
 }
 
 .botones input {
+  display: inline-block;
   margin-top: 30px;
   background-color: #333333;
 }
@@ -233,8 +234,7 @@ h2 {
 
 .tarjeta_btn {
   padding-left: 50px;
-  height: 440px;
-  align-content: flex-start;
+  margin-bottom: 50px;
 }
 .tarjeta_btn .btn-primary {
   margin-top: 50px;
